<resources>
    <string name="app_name">My Weather</string>
    <string name="title_item_detail">City Weather</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_add">Add City</string>
    <string name="forecast_unknown">Forecast Unknown</string>
    <string name="button_done">Done</string>
    <string name="button_close">Close</string>
    <string name="button_save">Save</string>
    <string name="hint_city_name">City name</string>
    <string name="button_delete">Delete</string>
    <string name="button_yes">Yes</string>
    <string name="button_no">No</string>
    <string name="todays_forecast">Today\'s Forecast:</string>
    <string name="humidity">humidity</string>
    <string name="wind">wind</string>
    <string name="button_delete_all">Delete All</string>
    <string name="prompt_delete_all">Are you sure you want to delete all cities?</string>

    <!-- API key for OpenWeatherMap.org -->
    <string name="open_weather_map_app_id" translatable="false">c6e381d8c7ff98f0fee43775817cf6ad</string>
</resources>
