<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bkg_rounded_dialog"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dialog_title_height"
        android:background="@drawable/bkg_rounded_dialog_title"
        >

        <Button
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|start"
            style="@style/DialogButtonStyle"
            android:text="@string/button_close" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="center"
            style="@style/DialogTitleStyle"
            android:text="@string/action_add"
            />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical|end"
            style="@style/DialogButtonStyle"
            android:text="@string/button_save" />

    </RelativeLayout>

    <View android:background="#FFCCCCCC"
        android:layout_height="2dp"
        android:layout_width="fill_parent"/>

    <EditText
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_city_name"
        android:maxLines="1"
        android:lines="1"
        android:inputType="text"
        />

    <View android:background="#FFCCCCCC"
        android:layout_height="2dp"
        android:layout_width="fill_parent"/>

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />


</LinearLayout>